--- a/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
+++ b/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="ForceGenerators\ParticleBungee.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\AnchorSpringObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ForceGenerators\ParticleBungee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\AnchorSpringObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
