--- a/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
+++ b/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="GameObject\SpringObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ForceGenerators\ParticleForceRegistry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -189,6 +192,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\SpringObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ForceGenerators\ParticleForceRegistry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
