--- a/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
+++ b/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="ForceGenerators\ParticleForceRegistry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\SpringParticleContainer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -195,6 +198,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ForceGenerators\ParticleForceRegistry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\SpringParticleContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
