--- a/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
+++ b/GDPHYSX Framework/GDPHYSX - Setup.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="GameObject\RigidBodyObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Physics\Quaterions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -261,6 +264,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\RigidBodyObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics\Quaterions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
